--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="w3-third w3-margin-bottom">
             <img src="/images/SCL2.jpeg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
             <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p style="color:black"><b>Shopee Code League 2022</b></p>
+              <p><b style="color:black">Shopee Code League 2022</b></p>
               <p class="w3-opacity" style="color:black">Shopee</p>
               <p style="color:black">Hackerank, Leetcode kind of Algorithm Challenge (was super difficult). Mandates: Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star. Longest common Subsequence. Awarded: Participation only. </p>
               <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
@@ -98,7 +98,7 @@
           <div class="w3-third w3-margin-bottom">
             <img src="/images/INTU.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
             <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p style="color:black"><b>INTUITION</b></p>
+              <p><b style="color:black">INTUITION</b></p>
               <p class="w3-opacity" style="color:black">IEEE INTUITION v8.0 2022</p>
               <p style="color:black">Issue MC for positive ART with Bot Father Telegram. Mandates: Google Cloud ML services, Google script API. Data Augmentation. Keras Image Processing. Awarded: First Place in Open Healthcare Category.</p>
               <a href="https://drive.google.com/file/d/19cagHFVPoFpJ2CEOB6sP_PVJudmpgT_9/view" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
@@ -107,7 +107,7 @@
           <div class="w3-third w3-margin-bottom">
             <img src="/images/DSTA.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
             <div class="w3-container w3-white" style="padding-bottom:20px;">
-              <p style="color:black"><b>Today-I-Learned</b></p>
+              <p><b style="color:black">Today-I-Learned</b></p>
               <p class="w3-opacity" style="color:black">DSTA, BRAINHACK 2021</p>
               <p style="color:black">First Hackathon! Mandates: Data Exploratory Analysis. Data Cleaning. Model Tuning. OpenCV library. RESNET50 for Image Classification and Speech Classification. Awarded: Ninth Place in Open Category.</p>
               <a href="https://drive.google.com/file/d/1sJ4p2BCACl4KUlsreoNjLHT9EU8xatW3/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
@@ -123,7 +123,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Tic-Tac-Toe</b></p>
+                <p><b style="color:black">Tic-Tac-Toe</b></p>
                 <p class="w3-opacity" style="color:black">CS50x Harvard, Cambridge</p>
                 <p style="color:black">Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
                 <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
@@ -133,7 +133,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Sudoku Auto-generation</b></p>
+                <p><b style="color:black">Sudoku Auto-generation</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
                 <p style="color:black">Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
@@ -142,7 +142,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Crossy Road</b></p>
+                <p><b style="color:black">Crossy Road</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
                 <p style="color:black">Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
@@ -154,7 +154,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/ECommerce.jpg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>E-commerce Website</b></p>
+                <p><b style="color:black">E-commerce Website</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
                 <p style="color:black">MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
@@ -163,7 +163,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Covid-19 Application</b></p>
+                <p><b style="color:black">Covid-19 Application</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
                 <p style="color:black">Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
@@ -172,7 +172,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Twilio.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Twilio Chatbot</b></p>
+                <p><b style="color:black">Twilio Chatbot</b></p>
                 <p class="w3-opacity" style="color:black">Personal</p>
                 <p style="color:black">Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
@@ -189,7 +189,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>AI Test Kitchen</b></p>
+                <p><b style="color:black">AI Test Kitchen</b></p>
                 <p class="w3-opacity" style="color:black">Google</p>
                 <p style="color:black">Natural Language Processing</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
@@ -198,7 +198,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Not now lizards!</b></p>
+                <p><b style="color:black">Not now lizards!</b></p>
                 <p class="w3-opacity" style="color:black">MLDA</p>
                 <p style="color:black">Computer Vision, Arduino, ROS</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
@@ -207,7 +207,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Titanic.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Titanic Disaster Prediction</b></p>
+                <p><b style="color:black">Titanic Disaster Prediction</b></p>
                 <p class="w3-opacity" style="color:black"></p>
                 <p style="color:black">ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
@@ -219,7 +219,7 @@
             <div class="w3-third w3-margin-bottom">
               <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
-                <p style="color:black"><b>Basic MediaPipe</b></p>
+                <p><b style="color:black">Basic MediaPipe</b></p>
                 <p class="w3-opacity" style="color:black"></p>
                 <p style="color:black">Computer Vision</p>
                 <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
