--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
       <div class="typewriter" >
         <span style="color:white; font: sans-serif; font-size:x-large;">
-          <h1>Hi, I am Darren Soh and I think life is greater with Coding</h1>
+          <!-- <h1>Hi, I am Darren Soh and I think life is greater with Coding</h1> -->        
+          <span>
+            <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
+              <span class="wrap"></span>
+            </a>
+          </span>
         </span>
-        <!-- <h1>
-          <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Darren.", "Software Engineer is my dream.", "I Love Design.", "I Love to Develop." ]'>
-            <span class="wrap"></span>
-          </a>
-        </h1> -->
+
       </div>
 
       <!--#EXP-->
