--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
-      <div class="typewriter" >  </div>    
-      <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
-          <span class="wrap"></span>
-        </a>
-      </h1>
-      
+      <div class="typewriter" >     
+        <h1>
+          <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
+            <span class="wrap"></span>
+          </a>
+        </h1>
+      </div> 
 
       <!--#EXP-->
       <div class="w3-container w3-content w3-padding-64" >
