--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
-      <div class="typewriter" >     
+      <div class="typewriter" style="color:white">     
         <h1>
           <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
             <span class="wrap"></span>
