--- a/index.html
+++ b/index.html
@@ -53,13 +53,17 @@
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
       <div class="typewriter" style="color:white">     
-        <h1>
+        <!-- <h1>
           <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
             <span class="wrap"></span>
           </a>
-        </h1>
+        </h1> -->
       </div> 
-
+      <h1>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
+          <span class="wrap"></span>
+        </a>
+      </h1>
       <!--#EXP-->
       <div class="w3-container w3-content w3-padding-64" >
         <h2 class="w3-wide w3-center" style="color:white">INTERNSHIP EXPERIENCE</h2>
