--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@
 <div id="particles-js">
   <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style="overflow:scroll; width:100%; height:800px; padding-top: 300px;">
-      <div class="typewriter" style="color:white">     
-        <!-- <h1>
+      <div class="typewriter">
+
+        <h1>
           <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
             <span class="wrap"></span>
           </a>
-        </h1> -->
+        </h1>
       </div> 
-      <h1>
+      <!-- <h1>
         <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Darren Soh.", My interests includes:", "Software Engineering, ", "Machine Learning, ", " and Algorithms." ]'>
           <span class="wrap"></span>
         </a>
-      </h1>
+      </h1> -->
       <!--#EXP-->
       <div class="w3-container w3-content w3-padding-64" >
         <h2 class="w3-wide w3-center" style="color:white">INTERNSHIP EXPERIENCE</h2>
@@ -123,32 +124,32 @@
           <p class="w3-opacity w3-center" style="color:white"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
       
           <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-            <div class="w3-third w3-margin-bottom">
+            <div class="w3-third w3-margin-bottom" style="padding-bottom:20px;">
               <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
                 <p><b style="color:black">Tic-Tac-Toe</b></p>
                 <p class="w3-opacity" style="color:black">CS50x Harvard, Cambridge</p>
                 <p style="color:black">Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
                 <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
-                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Sudoku Auto-generation</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
                 <p style="color:black">Customized Graphic User Interface. Created a puzzle generation feature.(Java)</p>
-                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Crossy Road</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
-                <p style="color:black">Modelled movements with C# scripts and appearance with Blender.(UNITY3D, Blender, C#)</p>
-                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+                <p style="color:black">C# scripts to model movement. Models made with Blender.(UNITY3D, Blender, C#)</p>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
           </div>
@@ -156,29 +157,29 @@
           <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
             <div class="w3-third w3-margin-bottom">
               <img src="/images/ECommerce.jpg" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">E-commerce Website</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
                 <p style="color:black">MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
-                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/AndroidStudio.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Covid-19 Application</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
                 <p style="color:black">Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
-                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Twilio.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Twilio Chatbot</b></p>
                 <p class="w3-opacity" style="color:black">Personal</p>
                 <p style="color:black">Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
-                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+                <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
             </div>
           </div>
@@ -189,27 +190,27 @@
           <p class="w3-opacity w3-center" style="color:white"><i>The all seeing eye of Coding</i></p><br>
       
           <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-            <div class="w3-third w3-margin-bottom">
+            <div class="w3-third w3-margin-bottom" style="padding-bottom:20px;">
               <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
                 <p><b style="color:black">AI Test Kitchen</b></p>
                 <p class="w3-opacity" style="color:black">Google</p>
                 <p style="color:black">Natural Language Processing</p>
-                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+                <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/NotNowLizards.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Not now lizards!</b></p>
                 <p class="w3-opacity" style="color:black">MLDA</p>
                 <p style="color:black">Computer Vision, Arduino, ROS</p>
-                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+                <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
             </div>
             <div class="w3-third w3-margin-bottom">
               <img src="/images/Titanic.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Titanic Disaster Prediction</b></p>
                 <p class="w3-opacity" style="color:black"></p>
                 <p style="color:black">ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
@@ -221,11 +222,11 @@
           <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
             <div class="w3-third w3-margin-bottom">
               <img src="/images/MediaPipe.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Basic MediaPipe</b></p>
                 <p class="w3-opacity" style="color:black"></p>
                 <p style="color:black">Computer Vision</p>
-                <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
+                <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
             </div>
           </div>
