--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div class="w3-container w3-white">
                 <p><b style="color:black">Tic-Tac-Toe</b></p>
                 <p class="w3-opacity" style="color:black">CS50x Harvard, Cambridge</p>
-                <p style="color:black">Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
+                <p style="color:black">Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
                 <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
@@ -169,7 +169,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Covid-19 Application</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
-                <p style="color:black">Firebase. MySQL DataBase. Linked pages with Apache Tomcat Servlets through IP configuration.(Android Studio, Kotlin, FireBase)</p>
+                <p style="color:black">Application to collect Covid19 Data. IP configurations. (Android Studio, Kotlin, MYSQL)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
@@ -177,11 +177,11 @@
               <img src="/images/Twilio.png" alt="San Francisco" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Twilio Chatbot</b></p>
-                <p class="w3-opacity" style="color:black">Personal</p>
-                <p style="color:black">Spring Framework with BootStrap, Postgres DataBase and Twilio interface.</p>
+                <p class="w3-opacity" style="color:black">Personal/Work</p>
+                <p style="color:black"> Chatbot made for clients to get quotes on Whatsapp. (SpringBoot, MongoDB, Dialogflow.) </p>
                 <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
-            </div>
+            </div>)
           </div>
         </div>
         <!-- ML -->
@@ -194,8 +194,8 @@
               <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
                 <p><b style="color:black">AI Test Kitchen</b></p>
-                <p class="w3-opacity" style="color:black">Google</p>
-                <p style="color:black">Natural Language Processing</p>
+                <p class="w3-opacity" style="color:black">Personal</p>
+                <p style="color:black">Google's Natural Language Processing and AI development platform.</p>
                 <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
             </div>
@@ -204,7 +204,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Not now lizards!</b></p>
                 <p class="w3-opacity" style="color:black">MLDA</p>
-                <p style="color:black">Computer Vision, Arduino, ROS</p>
+                <p style="color:black">Sprays water when a lizard crawls by(Computer Vision, Arduino, ROS)</p>
                 <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
             </div>
@@ -213,7 +213,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Titanic Disaster Prediction</b></p>
                 <p class="w3-opacity" style="color:black"></p>
-                <p style="color:black">ML models, Data cleaning, Variance Testing, Feature engineering, AutoML TPOT</p>
+                <p style="color:black">ML models, Data cleaning, Variance Testing, Feature engineering.</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
               </div>
             </div>
