--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="w3-container w3-white" style="padding-bottom:20px;">
               <p><b style="color:black">Shopee Code League 2022</b></p>
               <p class="w3-opacity" style="color:black">Shopee</p>
-              <p style="color:black">Hackerank, Leetcode kind of Algorithm Challenge (was super difficult). Mandates: Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star. Longest common Subsequence. Awarded: Participation only. </p>
+              <p style="color:black">Leetcode kind of Algorithm Challenge (was super difficult). Mandates: Python and Java used. BFS, DFS, Dijkstra, Greedy, A-Star. Longest common Subsequence. Awarded: Participation.</p>
               <a href="https://drive.google.com/file/d/1jW_Wr0YYpkZ3CUhi3cTAJGMwhrthuwLq/view?usp=sharing" class="w3-bar-item w3-button w3-black w3-margin-top">View Certificate</a>
             </div>
           </div>
@@ -123,7 +123,7 @@
           <h2 class="w3-wide w3-center" style="color:white">SOFTWARE ENGINEERING PROJECTS</h2>
           <p class="w3-opacity w3-center" style="color:white"><i>Tech Stacks: React, Spring, BootStrap... </i></p><br>
       
-          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+          <div class="w3-row-padding w3-padding-32">
             <div class="w3-third w3-margin-bottom" style="padding-bottom:20px;">
               <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white">
@@ -134,7 +134,7 @@
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
-            <div class="w3-third w3-margin-bottom">
+            <div class="w3-third w3-margin-bottom" style="padding-bottom:20px;">
               <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Sudoku Auto-generation</b></p>
@@ -160,7 +160,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">E-commerce Website</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
-                <p style="color:black">MYSQL DataBase. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
+                <p style="color:black">MYSQL DataBase. Webhooks. Apache Tomcat servlets.(Apache Tomcat, JavaScript, HTML, CSS, MYSQL)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
@@ -181,7 +181,7 @@
                 <p style="color:black"> Chatbot made for clients to get quotes on Whatsapp. (SpringBoot, MongoDB, Dialogflow.) </p>
                 <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
-            </div>)
+            </div>
           </div>
         </div>
         <!-- ML -->
@@ -189,10 +189,10 @@
           <h3 class="w3-wide w3-center" style="color:white">MACHINE LEARNING PROJECTS</h3>
           <p class="w3-opacity w3-center" style="color:white"><i>The all seeing eye of Coding</i></p><br>
       
-          <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-            <div class="w3-third w3-margin-bottom" style="padding-bottom:20px;">
+          <div class="w3-row-padding w3-padding-32">
+            <div class="w3-third w3-margin-bottom">
               <img src="/images/AiTestKitchen.png" alt="Paris" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">AI Test Kitchen</b></p>
                 <p class="w3-opacity" style="color:black">Personal</p>
                 <p style="color:black">Google's Natural Language Processing and AI development platform.</p>
@@ -214,7 +214,7 @@
                 <p><b style="color:black">Titanic Disaster Prediction</b></p>
                 <p class="w3-opacity" style="color:black"></p>
                 <p style="color:black">ML models, Data cleaning, Variance Testing, Feature engineering.</p>
-                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-bottom">View Project</a>
+                <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
           </div>
