--- a/index.html
+++ b/index.html
@@ -126,11 +126,10 @@
           <div class="w3-row-padding w3-padding-32">
             <div class="w3-third w3-margin-bottom" style="padding-bottom:20px;">
               <img src="/images/TicTacToe.png" alt="New York" style="width:100%; height:130px;" class="w3-hover-opacity">
-              <div class="w3-container w3-white">
+              <div class="w3-container w3-white"  style="padding-bottom:20px;">
                 <p><b style="color:black">Tic-Tac-Toe</b></p>
                 <p class="w3-opacity" style="color:black">CS50x Harvard, Cambridge</p>
                 <p style="color:black">Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
-                <!-- <button class="w3-button w3-black w3-margin-bottom">View Project</button> -->
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
