--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div class="w3-container w3-white"  style="padding-bottom:20px;">
                 <p><b style="color:black">Tic-Tac-Toe</b></p>
                 <p class="w3-opacity" style="color:black">CS50x Harvard, Cambridge</p>
-                <p style="color:black">Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
+                <p style="color:black">Object Oriented Design Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
@@ -147,7 +147,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Crossy Road</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
-                <p style="color:black">C# scripts to model movement. Models made with Blender.(UNITY3D, Blender, C#)</p>
+                <p style="color:black">C# scripts to model movements. Models made with Blender. Unity's ML Agent(TensorFlow, UNITY3D, Blender, C#)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
