--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Not now lizards!</b></p>
                 <p class="w3-opacity" style="color:black">MLDA</p>
-                <p style="color:black">Sprays water when a lizard crawls by(OpenCV, Arduino, ROS)</p>
+                <p style="color:black">Sprays water when a lizard crawls by a camera(OpenCV, Arduino, ROS)</p>
                 <a class="w3-bar-item w3-button w3-black w3-margin-top">In Progress</a>
               </div>
             </div>
