--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="w3-container w3-white" style="padding-bottom:20px;">
                 <p><b style="color:black">Crossy Road</b></p>
                 <p class="w3-opacity" style="color:black">NTU</p>
-                <p style="color:black">C# scripts to model movements. Models made with Blender. Unity's ML Agent(TensorFlow, UNITY3D, Blender, C#)</p>
+                <p style="color:black">C# scripts to model movements. Models made with Blender. ML Enemy.(TensorFlow, UNITY3D, Blender, C#)</p>
                 <a href="https://github.com/darren170999" class="w3-bar-item w3-button w3-black w3-margin-top">View Project</a>
               </div>
             </div>
